<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    android:layout_marginTop="120dp"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nom"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cognom" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/edat"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuari" />

    <EditText
        android:id="@+id/contrasenya"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registro"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:text="@string/registre"
        android:textSize="24sp" />

    <Button
        android:id="@+id/RelativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/relative_layout"
        android:textSize="18sp" />

    <Button
        android:id="@+id/ConstraintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout"
        android:textSize="16sp" />

</LinearLayout>