<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_marginTop="16dp"
    tools:context=".MainActivity2">
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nom"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/cognom" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apellido"
        android:ems="10"
        android:hint="@string/edat"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edad"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuari" />

    <EditText
        android:id="@+id/contrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/usuario"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/contrasenya"
        android:textSize="24sp" />

    <Button
        android:id="@+id/LinearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/registro"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/linear_layout"
        android:textSize="18sp" />

    <Button
        android:id="@+id/ConstraintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/constraint_layout"
        android:textSize="16sp" />
</RelativeLayout>