<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingHorizontal="30dp"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/nom"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/cognom"
            android:minHeight="48dp"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre" />

        <EditText
            android:id="@+id/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/edat"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellido" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/usuari"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edad" />

        <EditText
            android:id="@+id/contrasenya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuario" />

        <Button
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/registre"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <Button
            android:id="@+id/LinearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/linear_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registro" />

        <Button
            android:id="@+id/RelativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_layout"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearButton" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="216dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenya">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujer" />

        </RadioGroup>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/telefon"
            android:inputType="phone"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

